--- a/css/style.css
+++ b/css/style.css
@@ -167,12 +167,11 @@ body {
   background-color: #eee;
   margin: 0 auto;
   /* by importing clearfix from mixin inside here, then the resulting code will be:-
-
-  .row::after{
-      content: '';
-      display: table;
-      clear: both;
-      }
+    .row::after{
+        content: '';
+        display: table;
+        clear: both;
+    }
   */
 }
 .row:not(:last-child) {
@@ -183,13 +182,30 @@ body {
   display: table;
   clear: both;
 }
-.row .col-1-of-2 {
-  width: calc((100% - 8rem) / 2);
+.row [class^=col-] {
   background-color: red;
   float: left;
 }
-.row .col-1-of-2:not(:last-child) {
+.row [class^=col-]:not(:last-child) {
   margin-right: 8rem;
+}
+.row .col-1-of-2 {
+  width: calc((100% - 8rem) / 2);
+}
+.row .col-1-of-3 {
+  width: calc((100% - 16rem) / 3);
+}
+.row .col-2-of-3 {
+  width: calc(2 * (100% - 16rem) / 3 + 8rem);
+}
+.row .col-1-of-4 {
+  width: calc((100% - 24rem) / 4);
+}
+.row .col-2-of-4 {
+  width: calc(2 * (100% - 24rem) / 4 + 8rem);
+}
+.row .col-3-of-4 {
+  width: calc(3 * (100% - 24rem) / 4 + 16rem);
 }
 
 /*# sourceMappingURL=style.css.map */
