--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -8,22 +8,48 @@
   }
 
   /* by importing clearfix from mixin inside here, then the resulting code will be:-
-
-.row::after{
-    content: '';
-    display: table;
-    clear: both;
+    .row::after{
+        content: '';
+        display: table;
+        clear: both;
     }
-*/
-
+  */
   @include clearfix;
 
-  .col-1-of-2 {
-    width: calc((100% - $gutter-horizontal) / 2);
+  //attribute selector
+  //it is used to select specific attribute in html file. here ^= searches for all elements starting with col-1
+  [class^='col-'] {
     background-color: red;
     float: left;
+
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
     }
+  }
+
+  .col-1-of-2 {
+    width: calc((100% - $gutter-horizontal) / 2);
+  }
+
+  .col-1-of-3 {
+    width: calc((100% - 2 * ($gutter-horizontal)) / 3);
+  }
+
+  .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * $gutter-horizontal) / 3) + $gutter-horizontal);
+  }
+
+  .col-1-of-4 {
+    width: calc((100% - 3 * ($gutter-horizontal)) / 4);
+  }
+
+  .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * $gutter-horizontal) / 4) + $gutter-horizontal);
+  }
+
+  .col-3-of-4 {
+    width: calc(
+      3 * ((100% - 3 * $gutter-horizontal) / 4) + 2 * $gutter-horizontal
+    );
   }
 }
