--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body {
     transform: translate(0);
   }
 }
+/* declaring variables so that we can import and use it in main.scss file */
 .heading-primary {
   color: #ffffff;
   text-transform: uppercase;
@@ -87,6 +88,30 @@ body {
   font-weight: 700;
   letter-spacing: 1.75rem;
   animation: moveRight 1s ease-in-out;
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  display: inline-block;
+  letter-spacing: 0.2rem;
+  transition: all 0.5s;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.heading-secondary:hover {
+  transform: skewX(2deg) skewY(2deg) scale(1.1);
+  text-shadow: 0.3rem 1rem 2rem rgba(0, 0, 0, 0.3);
+}
+
+.u-center-text {
+  text-align: center;
+}
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem;
 }
 
 /* declaring variables so that we can import and use it in main.scss file */
@@ -164,7 +189,6 @@ body {
 
 .row {
   max-width: 114rem;
-  background-color: #eee;
   margin: 0 auto;
   /* by importing clearfix from mixin inside here, then the resulting code will be:-
     .row::after{
@@ -183,7 +207,6 @@ body {
   clear: both;
 }
 .row [class^=col-] {
-  background-color: red;
   float: left;
 }
 .row [class^=col-]:not(:last-child) {
@@ -206,6 +229,12 @@ body {
 }
 .row .col-3-of-4 {
   width: calc(3 * (100% - 24rem) / 4 + 16rem);
+}
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh;
 }
 
 /*# sourceMappingURL=style.css.map */
