--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-white: #fff;
 $color-black: #000;
+$color-grey-light-1: #f7f7f7;
 
 //grid
 $grid-width: 114rem;
