--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,5 @@
+@import '../abstracts/variables';
+
 .heading-primary {
   color: #ffffff;
   text-transform: uppercase;
@@ -22,5 +24,25 @@
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveRight 1s ease-in-out;
+  }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  display: inline-block;
+  letter-spacing: 0.2rem;
+  transition: all 0.5s;
+  -webkit-background-clip: text; //same as background-clip property
+  color: transparent; //color property sits on top of background-clip, so by making color: transparent applies the linear-gradient to the text
+  &:hover {
+    transform: skewX(2deg) skewY(2deg) scale(1.1);
+    text-shadow: 0.3rem 1rem 2rem rgba($color-black, 0.3);
   }
 }
