--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -13,7 +13,7 @@
     animation-name: moveButtonBottom;
     animation-duration: 3s;
     animation-delay: 2.5s;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
   }
 
   &:hover {
@@ -50,5 +50,30 @@
     border-radius: 999rem;
     z-index: -1;
     transition: all 0.5s;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+    font-size: $default-font-size;
+    transition: all 0.3s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+    transform: translateY(-1px) scale(0.95);
+  }
+
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+    transform: translateY(0);
   }
 }
